--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,8 +5,8 @@
     "target": "ES2020",
     "jsx": "react",
     "checkJs": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "strictNullChecks": false,
+    "strictFunctionTypes": false
   },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
